[build-system]
requires = ['setuptools>=61.0']
build-backend = "setuptools.build_meta"

[project]
name = "p3"
version = "0.0.1"
authors = [
  { name="vhqr", email="zqzq.cmd@gmail.com" },
]
description = "Python Proxy Platform."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Operating System :: POSIX :: Linux",
  "Environment :: Console",
  "Topic :: Internet",
  "Topic :: System :: Networking",
]
dependencies = [
  "typing_extensions",
  "yarl",
  "cryptography",
  "pycryptodome",
  "requests",
]

[project.urls]
"Homepage" = "https://github.com/vhqr0/python-proxy-platform"
"Bug Tracker" = "https://github.com/vhqr0/python-proxy-platform/issues"

[tool.setuptools.packages.find]
exclude = ['scripts']